# imageProcessing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Untitled.ipynb  cmake_install.cmake  findLocation  findLocation.cpp  findLocationTCP  findLocationTCP.cpp  lookAtLocation  lookAtLocation.cpp  out.txt  outb.txt  outg.txt  outr.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
